<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize30sp"
        android:hint="@string/dangNhap"
        android:layout_above="@+id/lnKhungDangNhap"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/size16dp"/>

    <ImageView
        android:id="@+id/ivSignupImage"
        android:layout_width="@dimen/size200dp"
        android:layout_height="@dimen/size200dp"
        android:src="@drawable/nguoinauan"
        android:layout_above="@id/tvDangNhap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size20dp"/>

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <EditText
            android:id="@+id/edtTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tenDangNhap"
            android:padding="@dimen/size20dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"

            />

        <EditText
            android:id="@+id/edtMatKhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhapMatKhau"
            android:padding="@dimen/size20dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnDongYDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dongY"
            android:backgroundTint="@color/Red"
            android:padding="@dimen/size20dp"
            android:textSize="@dimen/textSize20sp"/>

        <Button
            android:id="@+id/btnDangKyDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangKy"
            android:backgroundTint="@color/blue_magenta"
            android:padding="@dimen/size20dp"
            android:textSize="@dimen/textSize20sp"/>
    </LinearLayout>

</RelativeLayout>